tests/NormalTests/paczka1/fuzzy1/52209027.err
Error in line 1: jg1G90Xam A266 45,2
Error in line 8: jg1G90Xam A266 19,R
Error in line 15: ZqP4ki6Xi S268 66,9
Error in line 17: jg1G90Xam A266 4,8
Error in line 9: 3w9rUFlQ S497 40,4
Error in line 38: jg1G90Xam S497 -43,5
